[gd_scene load_steps=11 format=3 uid="uid://b4jbovryrd2qt"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_rjlel"]
[ext_resource type="Texture2D" uid="uid://oro76x71rsri" path="res://Cards/CARD BACK.png" id="2_wf8id"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_wf8id"]
load_path = "res://.godot/imported/Defend.png-2883a3a0bfdb86fd7e1a68d2a034d750.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjlel"]
size = Vector2(139, 203)

[sub_resource type="Animation" id="Animation_eumee"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LabelContainer/ManaCost:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.2509804, 0.7529412, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelContainer/InstantHeal:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.050980393, 0.8627451, 0.050980393, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LabelContainer/InstantDamage:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.4862745, 0, 0.08235294, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackCardIMG:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardIMG:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.13824937, 0.14941332)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardIMG:z_index")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BackCardIMG:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1395112, 0.15049085)]
}

[sub_resource type="Animation" id="Animation_brehn"]
resource_name = "card_flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LabelContainer/ManaCost:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.2509804, 0.7529412, 1, 0), Color(0.2509804, 0.7529412, 1, 0), Color(0.2509804, 0.7529412, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelContainer/InstantHeal:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.050980393, 0.8627451, 0.050980393, 0), Color(0.050980393, 0.8627451, 0.050980393, 0), Color(0.050980393, 0.8627451, 0.050980393, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LabelContainer/InstantDamage:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.4862745, 0, 0.08235294, 0), Color(0.4862745, 0, 0.08235294, 0), Color(0.4862745, 0, 0.08235294, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackCardIMG:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, -1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardIMG:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.13824937, 0.14941332), Vector2(0.024, 0.149), Vector2(0.13866666, 0.149)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CardIMG:z_index")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BackCardIMG:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.1395112, 0.15049085), Vector2(0.025458246, 0.15049085), Vector2(0.14052953, 0.15049085)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eumee"]
_data = {
&"RESET": SubResource("Animation_eumee"),
&"card_flip": SubResource("Animation_brehn")
}

[sub_resource type="Animation" id="Animation_bnspj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LabelContainer/ManaCost:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.2509804, 0.7529412, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelContainer/InstantHeal:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.050980393, 0.8627451, 0.050980393, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LabelContainer/InstantDamage:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.4862745, 0, 0.08235294, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackCardIMG:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardIMG:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e6po8"]
resource_name = "card_fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LabelContainer/ManaCost:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.2509804, 0.7529412, 1, 1), Color(0.2509804, 0.7529412, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelContainer/InstantHeal:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.050980393, 0.8627451, 0.050980393, 1), Color(0.050980393, 0.8627451, 0.050980393, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LabelContainer/InstantDamage:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.4862745, 0, 0.08235294, 1), Color(0.4862745, 0, 0.08235294, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackCardIMG:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CardIMG:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xnv4g"]
_data = {
&"RESET": SubResource("Animation_bnspj"),
&"card_fade": SubResource("Animation_e6po8")
}

[node name="Card" type="Node2D"]
script = ExtResource("1_rjlel")

[node name="CardIMG" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-5.722046e-06, 0)
scale = Vector2(0.13824937, 0.14941332)
texture = SubResource("CompressedTexture2D_wf8id")
region_enabled = true
region_rect = Rect2(0, 0, 982, 1355)

[node name="BackCardIMG" type="Sprite2D" parent="."]
position = Vector2(-3.8146973e-06, 1.0424519)
scale = Vector2(0.1395112, 0.15049085)
texture = ExtResource("2_wf8id")
region_enabled = true
region_rect = Rect2(0, 0, 982, 1355)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_rjlel")

[node name="LabelContainer" type="Node2D" parent="."]

[node name="InstantDamage" type="RichTextLabel" parent="LabelContainer"]
modulate = Color(0.4862745, 0, 0.08235294, 1)
offset_left = -57.0
offset_top = 31.0
offset_right = -17.0
offset_bottom = 71.0
theme_override_constants/outline_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstantHeal" type="RichTextLabel" parent="LabelContainer"]
modulate = Color(0.050980393, 0.8627451, 0.050980393, 1)
offset_left = -57.0
offset_top = 31.0
offset_right = -17.0
offset_bottom = 71.0
theme_override_constants/outline_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ManaCost" type="RichTextLabel" parent="LabelContainer"]
modulate = Color(0.2509804, 0.7529412, 1, 1)
offset_left = 17.0
offset_top = 31.0
offset_right = 57.0
offset_bottom = 71.0
theme_override_constants/outline_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cardflip" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_eumee")
}

[node name="cardfade" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xnv4g")
}

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
